// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render ExpensesSummary with 1 expense correctly 1`] = `
<div>
  <h1>
    viewing 
    1
     
    expense
     totaling 
    $2.35
  </h1>
</div>
`;

exports[`Should render ExpensesSummary with multiple expenses correctly 1`] = `
<div>
  <h1>
    viewing 
    3
     
    expenses
     totaling 
    $122.35
  </h1>
</div>
`;
